--- a/prac.html
+++ b/prac.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JAVASCRIPT PRAC-1</title>
+	<title>JAVASCRIPT PRAC-1</title>//title is relevant
 </head>
 <body>
 	<p id="">Hello world</p>
