--- a/prac.html
+++ b/prac.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>JAVASCRIPT PRAC-1</title>//title is relevant
+	<title>JAVASCRIPT PRACTICAL-1</title>//title is relevant
 </head>
 <body>
 	<p id="">Hello world</p>
